@@ -2,6 +2,11 @@ Revision history for Dist-Zilla-PluginBundle-DAGOLDEN
 
 {{$NEXT}}
 
+    [ADDED]
+
+    - Added 'darkpan' attribute to trigger FakeRelease
+      and dummy repo/bugtracker data
+
 0.050     2013-09-06 17:42:59 America/New_York
 
     [INCOMPATIBLE CHANGE]
